remove big data'

--- a/doc/notebooks/exiobase_monetary/tutorial_parse_exiobase_monetary.ipynb
+++ b/doc/notebooks/exiobase_monetary/tutorial_parse_exiobase_monetary.ipynb
@@ -33,21 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cvxpy module is not installed in your system. This will raise problems in some of the abilities of MARIO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mario  # Import MARIO\n",
     "\n",
-    "SUT_path = 'EXIOBASE_folder/MRSUT_2019.zip'  # Define the desired path to the folder where Exiobase should be downloaded\n",
+    "SUT_path = 'MRSUT_2019.zip'  # Define the desired path to the folder where Exiobase should be downloaded\n",
     "\n",
     "exiobase = mario.parse_exiobase(\n",
     "    table = 'SUT',\n",
@@ -222,11 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IOT_path = 'EXIOBASE_folder/IOT_2019_ixi.zip'  # Define the desired path to the folder where Exiobase should be downloaded\n",
+    "\n",
+    "# Download the exiobase IOT 2019 ixi\n",
+    "info = mario.download_exiobase3(\".\",years=[2019],system=\"ixi\")\n",
+    "\n",
+    "IOT_path = 'IOT_2019_ixi.zip'  # Define the desired path to the folder where Exiobase should be downloaded\n",
     "\n",
     "exiobase = mario.parse_exiobase(\n",
     "    table = 'IOT',\n",
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +258,7 @@
        "Sector = 163"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
