--- a/doc/notebooks/isard_to_chenery/tutorial_transformation_isard_to_chenery.ipynb
+++ b/doc/notebooks/isard_to_chenery/tutorial_transformation_isard_to_chenery.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In practical terms, the regional extradiagonal blocks of the SUPPLY matrix (S) of the Isard model are null, while the regional extradiagonal blocks of the USE matrix (U) are null in the Chenery-Moses model, as shown in the following example\n",
     "\n",
-    "![Alt text](isard_to_chenery\\example.jpg)"
+    "![Alt text](example.jpg)"
    ]
   },
   {
@@ -33,15 +33,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cvxpy module is not installed in your system. This will raise problems in some of the abilities of MARIO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mario\n",
     "\n",
@@ -809,23 +801,7 @@
      "output_type": "stream",
      "text": [
       "Database: to calculate s following matrices are need.\n",
-      "['z'].Trying to calculate dependencies.\n",
-      "C:\\Users\\loren\\Documents\\GitHub\\MARIO-Org\\MARIO\\mario\\tools\\tabletransform.py:268: PerformanceWarning:\n",
-      "\n",
-      "indexing past lexsort depth may impact performance.\n",
-      "\n",
-      "C:\\Users\\loren\\Documents\\GitHub\\MARIO-Org\\MARIO\\mario\\tools\\tabletransform.py:268: PerformanceWarning:\n",
-      "\n",
-      "indexing past lexsort depth may impact performance.\n",
-      "\n",
-      "C:\\Users\\loren\\Documents\\GitHub\\MARIO-Org\\MARIO\\mario\\tools\\tabletransform.py:278: PerformanceWarning:\n",
-      "\n",
-      "indexing past lexsort depth may impact performance.\n",
-      "\n",
-      "C:\\Users\\loren\\Documents\\GitHub\\MARIO-Org\\MARIO\\mario\\tools\\tabletransform.py:279: PerformanceWarning:\n",
-      "\n",
-      "indexing past lexsort depth may impact performance.\n",
-      "\n"
+      "['z'].Trying to calculate dependencies.\n"
      ]
     }
    ],
@@ -1569,13 +1545,6 @@
    "source": [
     "test_SUT.U"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1594,7 +1563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
